--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, 'Help') %>
+    <h1>Help</h1>
+    <p>
+      Get help in using the careers site
+ 	 <a href="http://careers.com/help">How to use the careers site</a>. 
+    </p>
+  
