Add a full_title helper

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,7 @@
-<h1>Careers App</h1>
+<% provide(:title, 'Contact') %>
+<h1>Contact</h1>
     <p>
-      This is the home page for the
+      This is the contact page for the
       <a href="http://mycareersidea.com/">My careers idea</a>
       application.
    </p>
