--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,13 @@
-<h1>Careers App</h1>
-    <p>
-      This is the home page for the
+<div class="center hero-unit">
+	<h1>Welcome to the Careers App</h1>
+    <h2>
+      Home page for 
       <a href="http://mycareersidea.com/">My careers idea</a>
       application.
-   </p>
+    </h2>
+
+    <%= link_to "Sign up now!", "signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://mycareersidea.com/' %>
+
