--- a/app/views/career_pages/help.html.erb
+++ b/app/views/career_pages/help.html.erb
@@ -1,2 +1,4 @@
-<h1>CareerPages#help</h1>
-<p>Find me in app/views/career_pages/help.html.erb</p>
+<h1>Career pages explained</h1>
+<p>
+	This is the help page for the Careers section of the site
+</p>
