--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,31 @@
-<div class="center hero-unit">
+<% if signed_in? %>
+  <div class="row">
+     <aside class="span4">
+        <section>
+          <%= render 'shared/user_info' %>
+        </section>
+        <section>
+          <%= render 'shared/micropost_form' %>
+        </section>
+     </aside>
+   <div class="span8">
+        <h3>Micropost Feed</h3>
+        <%= render 'shared/feed' %>
+   </div>
+  </div>  
+<% else %>
+	 <div class="center hero-unit">
+    	<h1>Careers</h1>
 
-	<h1>Careers</h1>
-    <h2>Home page for my careers information application.</h2>
+    <h2>Home page for Bristol based careers information.</h2>
 
-    <%= link_to "Sign up now!", "signup_path", class: "btn btn-large btn-primary" %>
-</div>
+      <%= link_to "Sign up now!", signup_path, 
+                                class: "btn btn-large btn-primary" %>
+  </div>
+ 
+<% end %> 
+
+  
 
 
 
